Add example of referring to a specific cell directly.

--- a/main.tex
+++ b/main.tex
@@ -59,6 +59,20 @@ While computing has become a foundation of all it is challenging for researchers
 
 The notebook \verb|<< nb >>| uses format \verb|<< d[nbdoc].nbformat >>|.
 
+Here is an example of a markdown cell:
+
+<< d['notebooks/Chapter1_Introduction.ipynb--ws-0-cell-42.md'] >>
+
+Here is the same cell in a Verbatim block:
+
+\begin{Verbatim}
+<< d['notebooks/Chapter1_Introduction.ipynb--ws-0-cell-42.md'] >>
+\end{Verbatim}
+
+Here is the same cell presented as highlighted markup:
+
+<< d['notebooks/Chapter1_Introduction.ipynb--ws-0-cell-42.md|pyg|l'] >>
+
 Here are the worksheets in the notebook:
 
 \begin{itemize}
